added gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /.vs/Syntax-Errors/v17/.wsuo
 /.vs/Syntax-Errors/v17
 /.vs/VSWorkspaceState.json
+/backend/Chas Events/Chas Events/appsettings.Development.json
